--- a/css.css
+++ b/css.css
@@ -1,4 +1,3 @@
-/* Styles généraux */
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +15,7 @@ body {
     padding: 20px;
 }
 
-/* Styles pour la barre latérale */
+
 .barre-laterale {
     width: 200px;
     background-color: #333;
@@ -58,8 +57,6 @@ body {
     align-items: center;
     justify-content: center; 
 }
-
-/* Styles pour les boutons dans la barre latérale */
 .bouton-laterale {
     display: block;
     width: 100%;
@@ -92,33 +89,27 @@ body {
 .bouton-fond:hover {
     background-color: #e8bb08;
 }
-
-/* Styles pour le contenu principal */
 .main-content {
     margin-left: 220px;
     padding: 20px;
 }
-
 #roubles {
     font-size: 24px;
     margin-bottom: 20px;
     text-align: center;
     color: #000;
 }
-
 .bouton {
     
     display: flex;
     text-transform: uppercase;
     color: #eeeeee;
-    font-size: 15px;/*taille global*/
+    font-size: 15px;
     background-color: #41c200;
-    padding: 15px 50px;/*taille*/
+    padding: 15px 50px;
     margin: 0 auto;
-    border-radius: 50px; /* Coins arrondis */
-    
+    border-radius: 50px;
 }
-
 .bouton:hover {
     background-color: #d32f2f;
 }
